--- a/components/member-sidebar.ejs
+++ b/components/member-sidebar.ejs
@@ -1,49 +1,123 @@
-<div class="d-flex flex-column  p-3 text-white sidemenu-link d-none d-lg-block bg-gray-1000 bg-opacity-75" >
-    <ul class="flex-column fw-bold list-unstyled">
+<!-- 電腦版Sidebar -->
+<div class="d-flex flex-column p-3 text-white sidemenu-link d-none d-lg-block bg-gray-1000 bg-opacity-75">
+  <ul class="flex-column fw-bold list-unstyled">
       <li class="nav-link text-gray-400 fs-4">我的帳戶</li>
-      <li><a href="member.html" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" data-content="member">個人資料</a></li>
-      <li><a href="meber-identity.html" class="nav-link text-white fs-5 ps-1 lh-lg" >身份審核</a></li>
-      <li><a href="member-changepassword.html" class="nav-link text-white fs-5 ps-1 lh-lg" >修改密碼</a></li>
-      <li><a href="meber-points.html" class="nav-link text-white fs-5 ps-1 lh-lg">可用點數</a></li>
-      <li><a href="member-settings.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">隱私設置</a></li>
-    </ul>
-      <ul class="flex-column fw-bold list-unstyled">
-        <li  class="nav-link text-gray-400 fs-4 pt-2">創業項目</li>
-        <li><a href="meber-newprojects.html" class="nav-link text-white fs-5 ps-1 lh-lg">新增創業項目</a></li>
-        <li><a href="meber-createdprojects.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">已建創業項目</a></li>
-      </ul>
-
-      <ul class="flex-column fw-bold list-unstyled">
-        <li class="nav-link text-gray-400 fs-4 pt-2">投資人</li>
-        <li><a href="meber-newinvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">建立/修改投資人資料</a></li>
-      </ul>
-
-      <ul class="flex-column fw-bold list-unstyled">
-        <li class="nav-link text-gray-400 fs-4 pt-2">評價紀錄</li>
-        <li><a href="meber-evaluateProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目評價</a></li>
-        <li><a href="meber-evaluateInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人評價</a></li>
-      </ul>
-      <ul class="flex-column fw-bold list-unstyled">
-      <li class="nav-link text-gray-400 fs-4 pt-2">我的收藏</li>
-      <li><a href="meber-collectProjects.html" class="nav-link text-white fs-5 ps-1 lh-lg">創業項目收藏列表</a></li>
-      <li><a href="meber-collectInvestor.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">投資人收藏列表</a></li>
-    </ul>
-    <ul class="flex-column fw-bold list-unstyled">
-    <li class="nav-link text-gray-400 fs-4 pt-2">我的活動</li>
-    <li><a href="meber-applyActivity.html" class="nav-link text-white fs-5 ps-1 lh-lg">已申請活動</a></li>
-    <li><a href="member-activityrecord.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">活動紀錄</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pt-2" data-content="member" data-title="個人資料" onclick="updateTitle('個人資料')">個人資料</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-identity" data-title="身分審核" onclick="updateTitle('身分審核')">身分審核</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-changepassword" data-title="修改密碼" onclick="updateTitle('修改密碼')">修改密碼</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-points" data-title="可用點數" onclick="updateTitle('可用點數')">可用點數</a></li>
+      <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-settings" data-title="隱私設置" onclick="updateTitle('隱私設置')">隱私設置</a></li>
+  </ul>
+  <ul class="flex-column fw-bold list-unstyled">
+    <li  class="nav-link text-gray-400 fs-4 pt-2">創業項目</li>
+    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-newprojects" data-title="新增創業項目" onclick="updateTitle('新增創業項目')">新增創業項目</a></li>
+    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-createdprojects" data-title="已建創業項目" onclick="updateTitle('已建創業項目')">已建創業項目</a></li>
   </ul>
 
   <ul class="flex-column fw-bold list-unstyled">
-  <li class="nav-link text-gray-400 fs-4 pt-2">我的消息</li>
-  <li><a href="member-sitenews.html" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">站內消息</a></li>
+    <li class="nav-link text-gray-400 fs-4 pt-2">投資人</li>
+    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-newinvestor" data-title="建立/修改投資人資料" onclick="updateTitle('建立/修改投資人資料')">建立/修改投資人資料</a></li>
+  </ul>
+
+  <ul class="flex-column fw-bold list-unstyled">
+    <li class="nav-link text-gray-400 fs-4 pt-2">評價紀錄</li>
+    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-evaluateProjects" data-title="創業項目評價" onclick="updateTitle('創業項目評價')">創業項目評價</a></li>
+    <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-evaluateInvestor" data-title="投資人評價" onclick="updateTitle('投資人評價')">投資人評價</a></li>
+  </ul>
+  <ul class="flex-column fw-bold list-unstyled">
+  <li class="nav-link text-gray-400 fs-4 pt-2">我的收藏</li>
+  <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-collectProjects" data-title="創業項目收藏列表" onclick="updateTitle('創業項目收藏列表')">創業項目收藏列表</a></li>
+  <li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-collectInvestor" data-title="投資人收藏列表" onclick="updateTitle('投資人收藏列表')">投資人收藏列表</a></li>
 </ul>
-  
+<ul class="flex-column fw-bold list-unstyled">
+<li class="nav-link text-gray-400 fs-4 pt-2">我的活動</li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg"  data-content="member-applyActivity" data-title="已申請活動" onclick="updateTitle('已申請活動')">已申請活動</a></li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-activityrecord" data-title="活動紀錄" onclick="updateTitle('活動紀錄')">活動紀錄</a></li>
+</ul>
+
+<ul class="flex-column fw-bold list-unstyled">
+<li class="nav-link text-gray-400 fs-4 pt-2">我的消息</li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2" data-content="member-sitenews" data-title="站內消息" onclick="updateTitle('站內消息')">站內消息</a></li>
+</ul>
+
 <ul class="flex-column fw-bold list-unstyled">
 <li class="nav-link text-gray-400 fs-4 pt-2">討論區</li>
-<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">新增文章</a></li>
-<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg">發文列表</a></li>
-<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2">查看留言</a></li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-postarticle" data-title="新增文章" onclick="updateTitle('新增文章')">新增文章</a></li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg" data-content="member-postlist" data-title="發文列表" onclick="updateTitle('發文列表')">發文列表</a></li>
+<li><a href="#" class="nav-link text-white fs-5 ps-1 lh-lg pb-2"  data-content="member-articlemessage" data-title="查看留言" onclick="updateTitle('查看留言')" >查看留言</a></li>
 </ul>
-</div> 
+  
+</div>
+<!-- 手機版Sidebar -->
+<div class="d-block d-lg-none">
+  <a class="btn border-bottom w-100 px-0" data-bs-toggle="offcanvas" href="#offcanvasSidebar" role="button" aria-controls="offcanvasSidebar">
+    <div class="d-flex align-items-center text-gray-100 fs-5">
+        <img src="/assets/images/icons/sidebar.png" alt="sidebar" style="width: 40px; height: 40px;">
+        <p class="ps-1 fw-bold" id="current-page-title2">個人資料</p>
+    </div>
+</a>
 
+
+  <div class="offcanvas offcanvas-start bg-gray-1000 opacity-75" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+      <div class="offcanvas-header border-bottom">
+          <h5 id="offcanvasSidebarLabel" class="text-primary-600 fw-bold fs-5" >會員中心</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+          <ul class="flex-column fw-bold list-unstyled">
+              <li class="nav-link text-gray-400 fs-5">我的帳戶</li>
+              <li><a href="#" class="nav-link text-white  ps-1 lh-lg pt-2" data-content="member" data-title="個人資料" onclick="updateTitle('個人資料')">個人資料</a></li>
+              <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-identity" data-title="身分審核" onclick="updateTitle('身分審核')">身分審核</a></li>
+              <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-changepassword" data-title="修改密碼" onclick="updateTitle('修改密碼')">修改密碼</a></li>
+              <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-points" data-title="可用點數" onclick="updateTitle('可用點數')">可用點數</a></li>
+              <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-2" data-content="member-settings" data-title="隱私設置" onclick="updateTitle('隱私設置')">隱私設置</a></li>
+          </ul>
+          <ul class="flex-column fw-bold list-unstyled">
+            <li  class="nav-link text-gray-400 fs-5 pt-1">創業項目</li>
+            <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-newprojects" data-title="新增創業項目" onclick="updateTitle('新增創業項目')">新增創業項目</a></li>
+            <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-createdprojects" data-title="已建創業項目" onclick="updateTitle('已建創業項目')">已建創業項目</a></li>
+          </ul>
+    
+          <ul class="flex-column fw-bold list-unstyled">
+            <li class="nav-link text-gray-400 fs-5 pt-1">投資人</li>
+            <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-newinvestor" data-title="建立/修改投資人資料" onclick="updateTitle('建立/修改投資人資料')">建立/修改投資人資料</a></li>
+          </ul>
+    
+          <ul class="flex-column fw-bold list-unstyled">
+            <li class="nav-link text-gray-400 fs-5 pt-1">評價紀錄</li>
+            <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-evaluateProjects" data-title="創業項目評價" onclick="updateTitle('創業項目評價')">創業項目評價</a></li>
+            <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-evaluateInvestor" data-title="投資人評價" onclick="updateTitle('投資人評價')">投資人評價</a></li>
+          </ul>
+          <ul class="flex-column fw-bold list-unstyled">
+          <li class="nav-link text-gray-400 fs-5 pt-1">我的收藏</li>
+          <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-collectProjects" data-title="創業項目收藏列表" onclick="updateTitle('創業項目收藏列表')">創業項目收藏列表</a></li>
+          <li><a href="#" class="nav-link text-white ps-1 lh-lg pb-1" data-content="member-collectInvestor" data-title="投資人收藏列表" onclick="updateTitle('投資人收藏列表')">投資人收藏列表</a></li>
+        </ul>
+        <ul class="flex-column fw-bold list-unstyled">
+        <li class="nav-link text-gray-400 fs-5 pt-1">我的活動</li>
+        <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-applyActivity" data-title="已申請活動" onclick="updateTitle('已申請活動')">已申請活動</a></li>
+        <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-activityrecord" data-title="活動紀錄" onclick="updateTitle('活動紀錄')">活動紀錄</a></li>
+      </ul>
+    
+      <ul class="flex-column fw-bold list-unstyled">
+      <li class="nav-link text-gray-400 fs-5 pt-1">我的消息</li>
+      <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-sitenews" data-title="站內消息" onclick="updateTitle('站內消息')">站內消息</a></li>
+    </ul>
+      
+    <ul class="flex-column fw-bold list-unstyled">
+    <li class="nav-link text-gray-400 fs-5 pt-1">討論區</li>
+    <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-postarticle" data-title="新增文章" onclick="updateTitle('新增文章')">新增文章</a></li>
+    <li><a href="#" class="nav-link text-white  ps-1 lh-lg" data-content="member-postlist" data-title="發文列表" onclick="updateTitle('發文列表')">發文列表</a></li>
+    <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1" data-content="member-articlemessage" data-title="查看留言" onclick="updateTitle('查看留言')" >查看留言</a></li>
+    </ul>
+      </div>
+  </div>
+</div>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+      window.updateTitle = function(title) {
+          document.getElementById('current-page-title2').innerText = title;
+      };
+  });
+
+</script>
