--- a/components/member/member-newprojects.ejs
+++ b/components/member/member-newprojects.ejs
@@ -1,124 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>會員中心</title>
-</head>
 
-<body>
-    <%- include('./layout/header'); -%>
-  
-    <main class="bg-green py-15">
-       <!-- 首頁>會員中心>新增創業項目 -->
-        <section class="container pt-8">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item text-white"><a href="index.html">首頁</a></li>
-                      <i class="bi bi-caret-right-fill text-white"></i>
-                      <li class="breadcrumb-item text-white"><a href="member.html">會員中心</a></li>
-                      <i class="bi bi-caret-right-fill text-white"></i>
-                      <li class="breadcrumb-item text-white fw-bold active" aria-current="page">新增創業項目</li>
-                    </ol>
-                </nav>
-              <h2 class="text-primary-600 py-1 fw-bold border-bottom pb-8">會員中心</h2>
-        </section>
+<!-- 基本資料 -->
+<div>
+<h3 class="text-gray-400 py-8 fw-bolder ">基本資料</h3>
+  <div class="d-sm-flex">
 
-
-        <section class="container">
-            <div class="row">
-                <!-- 電腦板sidebar -->
-             <div class="col-lg-3 d-none d-lg-block">
-                    <%- include('./components/member-sidebar'); %>
-                </div>
-            <div class="col-lg-9">
-                 <!-- 手機板sidebar -->
-    <div class="d-block d-lg-none border-bottom">
-        <a class="btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-          <div class="d-flex text-gray-100 fs-5 p-1">
-          <img src="/assets/images/icons/sidebar.png" alt="sidebar">
-          <p class=" ps-1 fw-bold">新增創業項目</p>
-        </div>
-        </a>
-        <div class="offcanvas offcanvas-start bg-gray-1000 bg-opacity-75" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-          <div class="offcanvas-header border-bottom">
-            <h5 class="offcanvas-title text-primary-600 fw-bold fs-5" id="offcanvasExampleLabel">會員中心</h5>
-            <button type="button" class="btn-close btn-close-white"  data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="d-flex flex-column  p-1 text-white bg-gray-1000 bg-opacity-75 sidemenu-link" >
-              <ul class="flex-column fw-bold list-unstyled">
-                <li class="nav-link text-gray-400 fs-5">我的帳戶</li>
-                <li><a href="member.html" class="nav-link text-white ps-1 lh-lg pt-1 " >個人資料</a></li>
-                <li><a href="meber-identity.html" class="nav-link text-white  ps-1 lh-lg" >身份審核</a></li>
-                <li><a href="member-changepassword.html" class="nav-link text-white  ps-1 lh-lg" >修改密碼</a></li>
-                <li><a href="meber-points.html" class="nav-link text-white  ps-1 lh-lg">可用點數</a></li>
-                <li><a href="member-settings.html" class="nav-link text-white  ps-1 lh-lg pb-1">隱私設置</a></li>
-              </ul>
-                <ul class="flex-column fw-bold list-unstyled">
-                  <li  class="nav-link text-gray-400 fs-5 pt-1">創業項目</li>
-                  <li><a href="meber-newprojects.html" class="nav-link text-primary-600  ps-1 lh-lg" active>新增創業項目</a></li>
-                  <li><a href="meber-createdprojects.html" class="nav-link text-white  ps-1 lh-lg pb-1">已建創業項目</a></li>
-                </ul>
-          
-                <ul class="flex-column fw-bold list-unstyled">
-                  <li class="nav-link text-gray-400 fs-5 pt-1">投資人</li>
-                  <li><a href="meber-newinvestor.html" class="nav-link text-white  ps-1 lh-lg pb-1">建立/修改投資人資料</a></li>
-                </ul>
-          
-                <ul class="flex-column fw-bold list-unstyled">
-                  <li class="nav-link text-gray-400 fs-5 pt-1">評價紀錄</li>
-                  <li><a href="meber-evaluateProjects.html" class="nav-link text-white  ps-1 lh-lg">創業項目評價</a></li>
-                  <li><a href="meber-evaluateInvestor.html" class="nav-link text-white  ps-1 lh-lg pb-1">投資人評價</a></li>
-                </ul>
-                <ul class="flex-column fw-bold list-unstyled">
-                <li class="nav-link text-gray-400 fs-5 pt-1">我的收藏</li>
-                <li><a href="meber-collectProjects.html" class="nav-link text-white  ps-1 lh-lg">創業項目收藏列表</a></li>
-                <li><a href="meber-collectInvestor.html" class="nav-link text-white ps-1 lh-lg pb-1">投資人收藏列表</a></li>
-              </ul>
-              <ul class="flex-column fw-bold list-unstyled">
-              <li class="nav-link text-gray-400 fs-5 pt-1">我的活動</li>
-              <li><a href="meber-applyActivity.html" class="nav-link text-white  ps-1 lh-lg">已申請活動</a></li>
-              <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">活動紀錄</a></li>
-            </ul>
-          
-            <ul class="flex-column fw-bold list-unstyled">
-            <li class="nav-link text-gray-400 fs-5 pt-1">我的消息</li>
-            <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">站內消息</a></li>
-          </ul>
-            
-          <ul class="flex-column fw-bold list-unstyled">
-          <li class="nav-link text-gray-400 fs-5 pt-1">討論區</li>
-          <li><a href="#" class="nav-link text-white  ps-1 lh-lg">新增文章</a></li>
-          <li><a href="#" class="nav-link text-white  ps-1 lh-lg">發文列表</a></li>
-          <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">查看留言</a></li>
-          </ul>
-          </div> 
-          </div>
-        </div>
-</div>
-               <!-- 基本資料 -->
-                <div>
-                    <h3 class="text-gray-400 py-8 fw-bolder ">基本資料</h3>
-                <div class="d-sm-flex">
-                    
-                      <div>
-                      <h6 class="text-white mb-3">公司商標:</h6>
-                      <div id="custom-avatar-upload1" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
-                        <label for="avatar1" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
-                        <input class="form-control" type="file" id="avatar1" name="avatar" accept="image/*" style="display: none;">
-                        <img id="previewImage1" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
-                      </div>
+   <div>
+     <h6 class="text-white mb-3">公司商標:</h6>
+     <div id="custom-avatar-upload6" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
+     <label for="avatar6" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
+     <input class="form-control" type="file" id="avatar6" name="avatar" accept="image/*" style="display: none;">
+     <img id="previewImage6" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
+   </div>
                    
                    
                   
-                      <h6 class="text-white my-3">公司形象照:</h6>
-                      <div id="custom-avatar-upload2" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
-                        <label for="avatar2" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
-                        <input class="form-control" type="file" id="avatar2" name="avatar" accept="image/*" style="display: none;">
-                        <img id="previewImage2" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
-                     </div>
-                    </div>
+   <h6 class="text-white my-3">公司形象照:</h6>
+   <div id="custom-avatar-upload7" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
+   <label for="avatar7" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
+   <input class="form-control" type="file" id="avatar7" name="avatar" accept="image/*" style="display: none;">
+   <img id="previewImage7" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
+ </div>
+</div>
                
             <!-- form表單 - 表格區 -->
                     <form class="row g-3 ms-md-2 ms-0">
@@ -259,19 +161,19 @@
                 <h4 class="text-gray-400 py-8 fw-bolder">其他相關訊息</h4>
             <h5 class="text-white mb-3">目前財務狀況</h5>
             <div class="d-flex  align-items-center">
-             <div id="custom-avatar-upload3" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
-                        <label for="avatar3" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
-                        <input class="form-control" type="file" id="avatar3" name="avatar" accept="image/*" style="display: none;">
-                        <img id="previewImage3" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
+             <div id="custom-avatar-upload8" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
+                        <label for="avatar8" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
+                        <input class="form-control" type="file" id="avatar8" name="avatar" accept="image/*" style="display: none;">
+                        <img id="previewImage8" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
                       </div>
               <p class="text-gray-400 w-50 ms-3">目前公司營運財報資料或是個人請提供財力證明，也是讓投資人評估募資的重要資訊。</p>
             </div>
               <h5 class="text-white mt-5 mb-3">上傳照片參考</h5>
             <div class="d-flex align-items-center">
-                <div id="custom-avatar-upload4" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
-                    <label for="avatar4" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
-                    <input class="form-control" type="file" id="avatar4" name="avatar" accept="image/*" style="display: none;">
-                    <img id="previewImage4" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
+                <div id="custom-avatar-upload9" class="custom-upload-image mt-5 mt-md-0" style="width: 250px; height: 250px; border: 2px solid #ccc; cursor: pointer; background-image: url(/assets/images/頭像1.png); background-size: contain; background-position: center; background-repeat: no-repeat; position: relative;">
+                    <label for="avatar9" class="form-label text-white" style="position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.5); padding: 5px; border-radius: 5px;">上傳圖片</label>
+                    <input class="form-control" type="file" id="avatar9" name="avatar" accept="image/*" style="display: none;">
+                    <img id="previewImage9" src="" alt="預覽圖片" style="width: 100%; height: 100%; display: none;">
                   </div>
               <p class="text-gray-400 w-50 ms-3">目前公司營運財報資料或是個人請提供財力證明，也是讓投資人評估募資的重要資訊。</p>
             </div>
@@ -282,23 +184,17 @@
   <div class="d-flex justify-content-around pt-8">
     <button   type="button"  class="btn btn-lg btn-outline-danger fw-bold" id="clearButton"><i class="bi bi-x-circle "></i> 清除
   </button>
-    <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal-store">
-      <button class="btn btn-lg btn-outline-primary-600 fw-bold">
-          <i class="bi bi-save "></i> 儲存變更
-      </button>
-  </a>
+  <button class="btn btn-lg btn-outline-primary-600 fw-bold" data-bs-toggle="modal" data-bs-target="#newprojects-modal">
+    <i class="bi bi-save"></i> 儲存變更
+</button>
 </div>
                 
-                </div>
 
-           </div>
-        </section>
  <!-- modal 儲存變更 -->
- <div class="modal fade" id="exampleModal-store" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade" id="newprojects-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-gray-1000">
             <div class="modal-header border-0">
-                <!-- <h5 class="modal-title text-primary-600" id="exampleModalLabel">林媽媽中式餐館</h5> -->
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
             <div class="modal-body text-center text-primary-600 fs-3 fw-bold">
@@ -315,50 +211,3 @@
    
 
    
-    </main>
-    
-    <script>
-        //清除文字
- document.getElementById('clearButton').addEventListener('click', function() {
-      document.querySelectorAll('.inputField').forEach(function(input) {
-       input.value = ''; 
-     });
-   });
-    
-
-        //圖片
-     function setupUpload(avatarId, uploadId, previewImageId) {
-    const avatar = document.getElementById(avatarId);
-    const customUpload = document.getElementById(uploadId);
-    const previewImage = document.getElementById(previewImageId);
-
-    customUpload.addEventListener('click', function() {
-        avatar.click();
-    });
-
-    avatar.addEventListener('change', function(event) {
-        const file = this.files[0];
-        const reader = new FileReader();
-
-        reader.onload = function(e) {
-            previewImage.src = e.target.result;
-            previewImage.style.display = 'block';
-            customUpload.style.backgroundImage = 'none';
-        };
-
-        reader.readAsDataURL(file);
-    });
-}
-
-    setupUpload('avatar1', 'custom-avatar-upload1', 'previewImage1');
-    setupUpload('avatar2', 'custom-avatar-upload2', 'previewImage2');
-    setupUpload('avatar3', 'custom-avatar-upload3', 'previewImage3');
-    setupUpload('avatar4', 'custom-avatar-upload4', 'previewImage4');
-
-    </script>
-
-    <%- include('./layout/footer'); -%>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/main.js"></script>
-</body>
-</html>
