--- a/components/member/member.ejs
+++ b/components/member/member.ejs
@@ -1,70 +1,3 @@
-  <!-- 手機板sidebar -->
-  <div class="d-block d-lg-none border-bottom">
-    <a class="btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-      <div class="d-flex text-gray-100 fs-5 p-1">
-      <img src="/assets/images/icons/sidebar.png" alt="sidebar">
-      <p class=" ps-1 fw-bold">個人資料</p>
-    </div>
-    </a>
-    <div class="offcanvas offcanvas-start bg-gray-1000 bg-opacity-75" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-      <div class="offcanvas-header border-bottom">
-        <h5 class="offcanvas-title text-primary-600 fw-bold fs-5" id="offcanvasExampleLabel">會員中心</h5>
-        <button type="button" class="btn-close btn-close-white"  data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div class="d-flex flex-column  p-1 text-white bg-gray-1000 bg-opacity-75 sidemenu-link" >
-          <ul class="flex-column fw-bold list-unstyled">
-            <li class="nav-link text-gray-400 fs-5">我的帳戶</li>
-            <li><a href="member.html" class="nav-link text-primary-600 ps-1 lh-lg pt-1 " active>個人資料</a></li>
-            <li><a href="meber-identity.html" class="nav-link text-white  ps-1 lh-lg" >身份審核</a></li>
-            <li><a href="member-changepassword.html" class="nav-link text-white  ps-1 lh-lg" >修改密碼</a></li>
-            <li><a href="meber-points.html" class="nav-link text-white  ps-1 lh-lg">可用點數</a></li>
-            <li><a href="member-settings.html" class="nav-link text-white  ps-1 lh-lg pb-1">隱私設置</a></li>
-          </ul>
-            <ul class="flex-column fw-bold list-unstyled">
-              <li  class="nav-link text-gray-400 fs-5 pt-1">創業項目</li>
-              <li><a href="meber-newprojects.html" class="nav-link text-white  ps-1 lh-lg">新增創業項目</a></li>
-              <li><a href="meber-createdprojects.html" class="nav-link text-white  ps-1 lh-lg pb-1">已建創業項目</a></li>
-            </ul>
-      
-            <ul class="flex-column fw-bold list-unstyled">
-              <li class="nav-link text-gray-400 fs-5 pt-1">投資人</li>
-              <li><a href="meber-newinvestor.html" class="nav-link text-white  ps-1 lh-lg pb-1">建立/修改投資人資料</a></li>
-            </ul>
-      
-            <ul class="flex-column fw-bold list-unstyled">
-              <li class="nav-link text-gray-400 fs-5 pt-1">評價紀錄</li>
-              <li><a href="meber-evaluateProjects.html" class="nav-link text-white  ps-1 lh-lg">創業項目評價</a></li>
-              <li><a href="meber-evaluateInvestor.html" class="nav-link text-white  ps-1 lh-lg pb-1">投資人評價</a></li>
-            </ul>
-            <ul class="flex-column fw-bold list-unstyled">
-            <li class="nav-link text-gray-400 fs-5 pt-1">我的收藏</li>
-            <li><a href="meber-collectProjects.html" class="nav-link text-white  ps-1 lh-lg">創業項目收藏列表</a></li>
-            <li><a href="meber-collectInvestor.html" class="nav-link text-white ps-1 lh-lg pb-1">投資人收藏列表</a></li>
-          </ul>
-          <ul class="flex-column fw-bold list-unstyled">
-          <li class="nav-link text-gray-400 fs-5 pt-1">我的活動</li>
-          <li><a href="meber-applyActivity.html" class="nav-link text-white  ps-1 lh-lg">已申請活動</a></li>
-          <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">活動紀錄</a></li>
-        </ul>
-      
-        <ul class="flex-column fw-bold list-unstyled">
-        <li class="nav-link text-gray-400 fs-5 pt-1">我的消息</li>
-        <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">站內消息</a></li>
-      </ul>
-        
-      <ul class="flex-column fw-bold list-unstyled">
-      <li class="nav-link text-gray-400 fs-5 pt-1">討論區</li>
-      <li><a href="#" class="nav-link text-white  ps-1 lh-lg">新增文章</a></li>
-      <li><a href="#" class="nav-link text-white  ps-1 lh-lg">發文列表</a></li>
-      <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">查看留言</a></li>
-      </ul>
-      </div> 
-      </div>
-    </div>
-</div>
-
-
 <!-- Form and avatar upload -->
 <div class="d-flex flex-lg-row flex-column mt-3">
 <div class=" d-block d-lg-none">
@@ -133,20 +66,17 @@
 <div class="d-flex justify-content-around pt-8">
 <button   type="button"  class="btn btn-lg btn-outline-danger fw-bold" id="clearButton"><i class="bi bi-x-circle "></i> 清除
 </button>
-<a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal-store">
-<button class="btn btn-lg btn-outline-primary-600 fw-bold">
-<i class="bi bi-save "></i> 儲存變更
+<button class="btn btn-lg btn-outline-primary-600 fw-bold" data-bs-toggle="modal" data-bs-target="#member-modal">
+  <i class="bi bi-save"></i> 儲存變更
 </button>
-</a>
 </div>
 
 
  <!-- modal 儲存變更 -->
- <div class="modal fade" id="exampleModal-store" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade" id="member-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content bg-gray-1000">
           <div class="modal-header border-0">
-              <!-- <h5 class="modal-title text-primary-600" id="exampleModalLabel">林媽媽中式餐館</h5> -->
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
           <div class="modal-body text-center text-primary-600 fs-3 fw-bold">
