--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,3 +1,5 @@
+
+<nav class="header navbar navbar-expand-lg fixed-top">
 <div class="container d-flex justify-content-center">
     <div class="d-flex justify-content-between align-items-center me-auto">
       <a class="navbar-brand" href="/pages/index.html">
