--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -39,10 +39,10 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/pay-plan.html">付費方案</a>
+          <a class="nav-link" href="pay-plan.html">付費方案</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/discuss.html">討論區</a>
+          <a class="nav-link" href="discuss.html">討論區</a>
         </li>
       </ul>
     </div>
