--- a/layout/chat-room.ejs
+++ b/layout/chat-room.ejs
@@ -13,8 +13,8 @@
     </div>
 
     <div class="row g-0">
-        <div class="col-lg-6 col-5">
-          <div class="message-list" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <div class="col-lg-6">
+          <div class="message-list d-none d-lg-block" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <button class="border message-item" id="v-pills-alcohol-tab" data-bs-toggle="pill" data-bs-target="#v-pills-alcohol" type="button" role="tab" aria-controls="v-pills-alcohol" aria-selected="true">
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="p-1">
@@ -62,7 +62,7 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-6 col-7">
+        <div class="col-lg-6 col-md-6">
           <div class="tab-content bg-gray-600" id="v-pills-tabContent">
             <div class="tab-pane fade show active alcohol" id="v-pills-alcohol" role="tabpanel" aria-labelledby="v-pills-alcohol-tab"
             style="height: 300px;">
