--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -46,7 +46,7 @@
         </li>
         <li class="nav-item text-end">
           <a
-      href="/pages/login/login.html"
+      href="login.html"
       class="btn login-btn btn-primary-600 d-lg-none mt-8 mt-lg">
       註冊/登入
     </a>
